--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
     "gh-pages": "^6.0.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
