--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.4",
+    "axios": "^1.7.9",
     "gh-pages": "^6.0.0",
     "path": "^0.12.7",
     "react": "^18.2.0",
